[tool.poetry]
name = "pubsub-emulator"
version = "0.1.0"
description = ""
authors = ["Victor Martinez <vcrmartinez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-pubsub = "^2.18.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
